Lessens margin nav item margin slightly to prevent nav wrapping in firefox (#11)

--- a/scss/partials/static/_legacy.scss
+++ b/scss/partials/static/_legacy.scss
@@ -85,7 +85,7 @@ $blueberry-lime-gradient: linear-gradient(30deg, $blueberry 10%, $lime 90%);
 
     li {
       display: inline-block;
-      margin-left: 32px;
+      margin-left: 30px;
 
       a {
         color: $color-gray-dark;
